--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -19,6 +20,23 @@
   
      
   <div class="container home">
+
+    <nav>
+      <h2>Fun Bus</h2>
+      <a href="#home">Home</a>
+      <a href="#about-us">About Us</a>
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+    <img class="fun-bus" src="img/fun-bus.jpg" alt="Fun Bus Image">
+
+    <section class="welcome-section">
+      <div class="text-content">
+        <h2>Welcome to Fun Bus!</h2>
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure.</p>
+      </div>
+    </section>
    
     <section class="content-section">
       <div class="text-content">
